# miniscript

./: .gitignore  .stestr.conf  LICENSE.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: python-package.yml
doc/source/: conf.py  index.rst
minidpl/: __init__.py  _actions.py
minidpl/tests/: test_actions.py  test_engine.py  test_items.py
miniscript/: __init__.py  _actions.py  _context.py  _engine.py  _task.py  _tasks.py  _types.py  _utils.py  filters.py  tasks.py
miniscript/tests/: ansible_bug_11891.yaml  example-docs.yaml  example-large.yaml  test_context.py  test_engine.py  test_filters.py  test_functional.py  test_task.py  test_tasks.py  test_utils.py
