[metadata]
name = miniscript
summary = Ansible-like Embedded Script
description-file =
    README.rst
author = Dmitry Tantsur
author-email = dtantsur@protonmail.com
home-page = https://miniscript.readthedocs.io/en/latest/
python-requires = >=3.6
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    miniscript
