[metadata]
name = miniscript
summary = Scripting Language with Ansible-like Syntax
description-file = README.rst
author = Dmitry Tantsur
author-email = dtantsur@protonmail.com
home-page = https://miniscript.readthedocs.io/en/latest/
license = BSD-3-Clause
license_files = LICENSE.rst
python-requires = >=3.6
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    miniscript

[extras]
extras =
  jmespath # MIT
